[package]
name = "gh0St_OS"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# for `cargo build`
[profile.dev]
panic = "abort" # disable stack unwinding on panic

# for `cargo build --release`
[profile.release]
panic = "abort" # disable stack unwinding on panic

[dependencies]
