[package]
name = "gh0St_OS"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
bootloader = "0.9.8"
volatile = "0.2.6"
spin = "0.9.4"
x86_64 = "0.14.10"
uart_16550 = "0.2.18"

[dependencies.lazy_static]
version = "1.0"
features = ["spin_no_std"]

[package.metadata.bootimage] 
test-args = [
    "-device","isa-debug-exit,iobase=0xf4,iosize=0x04", # provides an easy way to exit QEMU from the guest system
    "-serial","stdio", # To see serial output from QEMU
    "-display", "none" # Hide QEMU window
] 
test-success-exit-code = 33 # (0x10 << 1) | 1
test-timeout = 300 # (seconds) for tests that are stuck in an endless loop don’t block cargo test forever. Marked as timed out after 5 minutes

[[test]]
name = "should_panic"
harness = false # Disable default test runner and custom test runner
